<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MmComic</string>
    <string name="app_description">Android comic reader</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="action_view_mode">View Mode</string>
    <string name="action_view_mode_aspect_fill">Aspect Fill</string>
    <string name="action_view_mode_aspect_fit">Aspect Fit</string>
    <string name="action_view_mode_fit_width">Fit Width</string>

    <string name="action_reading_mode">Reading Mode</string>
    <string name="action_reading_mode_left_to_right">Comics</string>
    <string name="action_reading_mode_right_to_left">Manga</string>

    <string name="menu_browser_filter">Filter</string>
    <string name="menu_browser_filter_all">All</string>
    <string name="menu_browser_filter_read">Read</string>
    <string name="menu_browser_filter_reading">Currently reading</string>
    <string name="menu_browser_filter_unread">Unread</string>
    <string name="menu_browser_filter_unfinished">Unfinished</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_library">Library</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_about">About</string>

    <string name="library_header_recent">Recent</string>
    <string name="library_header_all">All</string>

    <string name="directory_picker_header">Set a library directory</string>
    <string name="directory_picker_confirm">Select</string>
    <string name="directory_picker_cancel">Cancel</string>

    <string name="search">Search</string>

    <string name="browser_search_hint">Please enter a search term</string>

    <string name="reload">Reload</string>

    <string name="switch_action_positive">Yes</string>
    <string name="switch_action_negative">No</string>
    <string name="switch_next_comic">Would you like to switch to the next comic?</string>
    <string name="switch_prev_comic">Would you like to switch to the previous comic?</string>

    <string name="library_empty">Your collection seems empty. Click \"folder\" icon to select library directory</string>
    <string name="warning_missing_file">Missing file. Please update the library</string>
    <string name="tv_empty">working....</string>
    <string name="reload_descr">reloading...</string>
    <string name="loadmore">Loading More..</string>
    <string name="load_failed">load failed,retry...</string>
</resources>
