<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_reader_aspect_ratio"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/menu_browser_filter"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_browser_filter_all"
                    android:checked="true"
                    android:title="@string/menu_browser_filter_all"/>
                <item
                    android:id="@+id/menu_browser_filter_unread"
                    android:title="@string/menu_browser_filter_unread"/>
                <item
                    android:id="@+id/menu_browser_filter_reading"
                    android:title="@string/menu_browser_filter_reading"/>
                <item
                    android:id="@+id/menu_browser_filter_unfinished"
                    android:title="@string/menu_browser_filter_unfinished"/>
                <item
                    android:id="@+id/menu_browser_filter_read"
                    android:title="@string/menu_browser_filter_read"/>
            </group>
        </menu>
    </item>


</menu>