<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/directory_picker_header"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/directory_current_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/directory_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:drawSelectorOnTop="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/directory_picker_confirm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:minWidth="64dp"
            android:text="@string/directory_picker_confirm"/>

        <Button
            android:id="@+id/directory_picker_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/directory_picker_confirm"
            android:layout_toStartOf="@id/directory_picker_confirm"
            android:minWidth="64dp"
            android:text="@string/directory_picker_cancel"/>
    </RelativeLayout>
</LinearLayout>